tests/snapshots/integration__spec_test__spec_cmd_alias.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec alias

OUTPUT
argc__args=(  )
argc__fn=cmd_alias
cmd_alias

