tests/snapshots/integration__spec_test__spec_cmd_combine_shorts.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_combine_shorts -ac yes

OUTPUT
argc_a=1
argc_c=yes
argc__args=(  )
argc__fn=cmd_combine_shorts
cmd_combine_shorts

