tests/snapshots/integration__spec_test__spec_cmd_flag_formats_count.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_flag_formats --foo5 --foo5 --foo5

OUTPUT
argc_foo5=3
cmd_flag_formats

