tests/snapshots/integration__spec_test__spec_cmd_no_long_flags.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_no_long_flags -h

OUTPUT
cat >&2 <<-'EOF' 
Flags without long name

USAGE: spec cmd_no_long_flags [OPTIONS]

OPTIONS:
  -a          This is a flag
  -b...
  -h, --help  Print help

EOF
exit 0

