tests/snapshots/integration__spec_test__spec_cmd_notation_values.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_notation_values -h

OUTPUT
cat >&2 <<-'EOF' 
Notation values

USAGE: spec cmd_notation_values [OPTIONS]

OPTIONS:
      --opt1 <>
      --opt2 <ABC>
      --opt3 <ABC DEF>
      --opt4 <[ABC DEF]>
      --opt5 <<ABC DEF>>
  -h, --help

EOF
exit 0

