tests/snapshots/integration__spec_test__spec_cmd_omitted_help.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_omitted -h

OUTPUT
cat >&2 <<-'EOF' 
Omitted

USAGE: spec cmd_omitted [OPTIONS] [ARG1]

ARGS:
  [ARG1]

OPTIONS:
      --flag1
      --opt1 <OPT1>
  -h, --help

EOF
exit 0

