tests/snapshots/integration__spec_test__spec_cmd_option_formats_help.snap
---
source: tests/spec_test.rs
assertion_line: 23
expression: output
---
RUN
spec cmd_option_formats -h

STDOUT


STDERR
spec-cmd_option_formats 
Options all kind of formats

USAGE:
    spec cmd_option_formats [OPTIONS]

OPTIONS:
    -a, --opt2 <OPT2>    
    -b, --opt5 <OPT5>    With description
    -c, --opt6 <OPT>     
    -h, --help           Print help information
        --opt1 <OPT1>    
        --opt3 <OPT>     
        --opt4 <OPT4>    With description
        --opt7 <OPT>     With description


