tests/snapshots/integration__spec_test__spec_cmd_option_names_choices_fn.snap
---
source: tests/spec_test.rs
expression: output
---
RUN
spec cmd_option_names --opt2 v2 --opt4 v4 --opt8 v8 --op11 xyz

OUTPUT
cat >&2 <<-'EOF' 
error: invalid value 'v8' for '<OPT8>'
  [possible values: a, b, c]

For more information, try '--help'.

EOF
exit 1

