tests/snapshots/integration__spec_test__spec_cmd_option_names_exec_e.snap
---
source: tests/spec_test.rs
assertion_line: 89
expression: output

---
RUN
spec cmd-option-names --opt2 value2 --opt3 value3_0,value3_1 --opt4 value4_0 --opt4 value4_1 --opt6 a

STDOUT
argc_opt_2="value2"
argc_opt_3=( "value3_0" "value3_1" )
argc_opt_4=( "value4_0" "value4_1" )
argc_opt_5="a"
argc_opt_6="a"
argc_opt_7="a"
cmd_option_names

STDERR


